--- a/face_recog.ipynb
+++ b/face_recog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "724df036",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "d14fd99e",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "17f075e4",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9a6a7713",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "99803609",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "ec0dcf4c",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "70b2b9ad",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "4f644702",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "44420de3",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "ff2642d4",
    "metadata": {},
    "outputs": [
@@ -257,8 +257,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\banhm\\AppData\\Local\\Temp\\ipykernel_10472\\1683749261.py:69: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"D:/HUCE/ThiGiacMayTinh/code/final_triplet_resnet18_ss2.pth\"))\n"
+      "d:\\HUCE\\NQ\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "d:\\HUCE\\NQ\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n",
+      "C:\\Users\\banhm\\AppData\\Local\\Temp\\ipykernel_17308\\209061197.py:68: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(\"./final_triplet_resnet18_ss2.pth\"))\n"
      ]
     }
    ],
@@ -312,8 +316,7 @@
     "                with torch.no_grad():\n",
     "                    emb = model.forward_once(img_tensor)\n",
     "                # Key: person_name, Value: embedding\n",
-    "                # Có thể lưu theo nhiều cách:\n",
-    "                # Cách 1: Lưu cả tên người và tên file\n",
+    "\n",
     "                key = f\"{person_name}_{img_name}\"\n",
     "                gallery_embeddings[key] = (person_name, emb)\n",
     "                \n",
@@ -331,17 +334,17 @@
     "\n",
     "\n",
     "model = TripletNet().cuda()\n",
-    "model.load_state_dict(torch.load(\"D:/HUCE/ThiGiacMayTinh/code/final_triplet_resnet18_ss2.pth\"))\n",
+    "model.load_state_dict(torch.load(\"./final_triplet_resnet18_ss2.pth\"))\n",
     "model.eval()\n",
     "\n",
-    "gallery_dir = \"D:/HUCE/ThiGiacMayTinh/code/input_test\"\n",
+    "gallery_dir = \"./input_test\"\n",
     "gallery_embeddings = build_gallery_embeddings(model, gallery_dir, transform)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "21214eb7",
    "metadata": {},
    "outputs": [],
@@ -379,8 +382,6 @@
     "                with torch.no_grad():\n",
     "                    emb = model.forward_once(img_tensor)\n",
     "                # Key: person_name, Value: embedding\n",
-    "                # Có thể lưu theo nhiều cách:\n",
-    "                # Cách 1: Lưu cả tên người và tên file\n",
     "                key = f\"{person_name}_{img_name}\"\n",
     "                gallery_embeddings[key] = (person_name, emb)\n",
     "                \n",
@@ -390,7 +391,7 @@
     "    return gallery_embeddings\n",
     "\n",
     "# === Hàm nhận diện với tất cả embedding riêng lẻ ===\n",
-    "def identify_image(image_path, model, gallery_embeddings, transform, threshold=0.7):\n",
+    "def identify_image(image_path, model, gallery_embeddings, transform, threshold=0.4):\n",
     "    img = Image.open(image_path).convert(\"RGB\")\n",
     "    img_tensor = transform(img).unsqueeze(0).cuda()\n",
     "    \n",
@@ -415,7 +416,7 @@
     "    return identity, min_dist, matched_image\n",
     "\n",
     "# === Phương pháp kết hợp (Voting) ===\n",
-    "def identify_image_voting(image_path, model, gallery_embeddings, transform, threshold=0.7, top_k=5):\n",
+    "def identify_image_voting(image_path, model, gallery_embeddings, transform, threshold=0.4, top_k=5):\n",
     "    \"\"\"\n",
     "    Lấy top-k ảnh gần nhất và vote cho người xuất hiện nhiều nhất\n",
     "    \"\"\"\n",
@@ -572,9 +573,7 @@
     "    result_text.set(\n",
     "        f\"Tên ảnh: {image_name}\\n\"\n",
     "        f\"Dự đoán: {identity}\\n\"\n",
-    "        f\"Kết quả: {correctness}\\n\"\n",
-    "        f\"Khoảng cách: {dist:.3f}\\n\"\n",
-    "        f\"Khớp với: {matched_image}\"  # Thêm thông tin ảnh khớp\n",
+    "\n",
     "    )\n",
     "\n",
     "# def batch_test():\n",
